; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_emulate.c_decode_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_emulate.c_decode_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i64*, i32)* @decode_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @decode_register(i64 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i64*, i64** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = getelementptr inbounds i64, i64* %8, i64 %9
  %11 = bitcast i64* %10 to i8*
  store i8* %11, i8** %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %3
  %15 = load i64, i64* %4, align 8
  %16 = icmp uge i64 %15, 4
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i64, i64* %4, align 8
  %19 = icmp ult i64 %18, 8
  br i1 %19, label %20, label %27

20:                                               ; preds = %17
  %21 = load i64*, i64** %5, align 8
  %22 = load i64, i64* %4, align 8
  %23 = and i64 %22, 3
  %24 = getelementptr inbounds i64, i64* %21, i64 %23
  %25 = bitcast i64* %24 to i8*
  %26 = getelementptr inbounds i8, i8* %25, i64 1
  store i8* %26, i8** %7, align 8
  br label %27

27:                                               ; preds = %20, %17, %14, %3
  %28 = load i8*, i8** %7, align 8
  ret i8* %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
